versions/GNDS-v2.0/GNDS/c/src/v2.0/general/Energy.h

// --- Const-aware handles.
typedef const struct EnergyClass *const ConstHandle2ConstEnergy;
typedef       struct EnergyClass *const ConstHandle2Energy;
// -----------------------------------------------------------------------------
// Child: discreteGamma
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyDiscreteGammaHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstDiscreteGamma
EnergyDiscreteGammaGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2DiscreteGamma
EnergyDiscreteGammaGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyDiscreteGammaSet(ConstHandle2Energy self, ConstHandle2ConstDiscreteGamma discreteGamma);
// -----------------------------------------------------------------------------
// Child: XYs2d
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyXYs2dHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstXYs2d
EnergyXYs2dGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2XYs2d
EnergyXYs2dGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyXYs2dSet(ConstHandle2Energy self, ConstHandle2ConstXYs2d XYs2d);
// -----------------------------------------------------------------------------
// Child: generalEvaporation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyGeneralEvaporationHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstGeneralEvaporation
EnergyGeneralEvaporationGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2GeneralEvaporation
EnergyGeneralEvaporationGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyGeneralEvaporationSet(ConstHandle2Energy self, ConstHandle2ConstGeneralEvaporation generalEvaporation);
// -----------------------------------------------------------------------------
// Child: evaporation
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyEvaporationHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstEvaporation
EnergyEvaporationGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2Evaporation
EnergyEvaporationGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyEvaporationSet(ConstHandle2Energy self, ConstHandle2ConstEvaporation evaporation);
// -----------------------------------------------------------------------------
// Child: weightedFunctionals
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyWeightedFunctionalsHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstWeightedFunctionals
EnergyWeightedFunctionalsGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2WeightedFunctionals
EnergyWeightedFunctionalsGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyWeightedFunctionalsSet(ConstHandle2Energy self, ConstHandle2ConstWeightedFunctionals weightedFunctionals);
// -----------------------------------------------------------------------------
// Child: simpleMaxwellianFission
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergySimpleMaxwellianFissionHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstSimpleMaxwellianFission
EnergySimpleMaxwellianFissionGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2SimpleMaxwellianFission
EnergySimpleMaxwellianFissionGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergySimpleMaxwellianFissionSet(ConstHandle2Energy self, ConstHandle2ConstSimpleMaxwellianFission simpleMaxwellianFission);
// -----------------------------------------------------------------------------
// Child: MadlandNix
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
EnergyMadlandNixHas(ConstHandle2ConstEnergy self);
// --- Get, const
extern_c Handle2ConstMadlandNix
EnergyMadlandNixGetConst(ConstHandle2ConstEnergy self);
// +++ Get
extern_c Handle2MadlandNix
EnergyMadlandNixGet(ConstHandle2Energy self);
// +++ Set
extern_c void
EnergyMadlandNixSet(ConstHandle2Energy self, ConstHandle2ConstMadlandNix MadlandNix);