versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Energy.f03


!! -----------------------------------------------------------------------------
!! Child: discreteGamma
!! -----------------------------------------------------------------------------

!! Has
function EnergyDiscreteGammaHas(handle) &
      bind(C, name='EnergyDiscreteGammaHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyDiscreteGammaHas

!! Get, const
function EnergyDiscreteGammaGetConst(handle) &
      bind(C, name='EnergyDiscreteGammaGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyDiscreteGammaGetConst

!! Get
function EnergyDiscreteGammaGet(handle) &
      bind(C, name='EnergyDiscreteGammaGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyDiscreteGammaGet

!! Set
subroutine EnergyDiscreteGammaSet(handle, fieldHandle) &
      bind(C, name='EnergyDiscreteGammaSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyDiscreteGammaSet


!! -----------------------------------------------------------------------------
!! Child: XYs2d
!! -----------------------------------------------------------------------------

!! Has
function EnergyXYs2dHas(handle) &
      bind(C, name='EnergyXYs2dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyXYs2dHas

!! Get, const
function EnergyXYs2dGetConst(handle) &
      bind(C, name='EnergyXYs2dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyXYs2dGetConst

!! Get
function EnergyXYs2dGet(handle) &
      bind(C, name='EnergyXYs2dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyXYs2dGet

!! Set
subroutine EnergyXYs2dSet(handle, fieldHandle) &
      bind(C, name='EnergyXYs2dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyXYs2dSet


!! -----------------------------------------------------------------------------
!! Child: generalEvaporation
!! -----------------------------------------------------------------------------

!! Has
function EnergyGeneralEvaporationHas(handle) &
      bind(C, name='EnergyGeneralEvaporationHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyGeneralEvaporationHas

!! Get, const
function EnergyGeneralEvaporationGetConst(handle) &
      bind(C, name='EnergyGeneralEvaporationGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyGeneralEvaporationGetConst

!! Get
function EnergyGeneralEvaporationGet(handle) &
      bind(C, name='EnergyGeneralEvaporationGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyGeneralEvaporationGet

!! Set
subroutine EnergyGeneralEvaporationSet(handle, fieldHandle) &
      bind(C, name='EnergyGeneralEvaporationSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyGeneralEvaporationSet


!! -----------------------------------------------------------------------------
!! Child: evaporation
!! -----------------------------------------------------------------------------

!! Has
function EnergyEvaporationHas(handle) &
      bind(C, name='EnergyEvaporationHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyEvaporationHas

!! Get, const
function EnergyEvaporationGetConst(handle) &
      bind(C, name='EnergyEvaporationGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyEvaporationGetConst

!! Get
function EnergyEvaporationGet(handle) &
      bind(C, name='EnergyEvaporationGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyEvaporationGet

!! Set
subroutine EnergyEvaporationSet(handle, fieldHandle) &
      bind(C, name='EnergyEvaporationSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyEvaporationSet


!! -----------------------------------------------------------------------------
!! Child: weightedFunctionals
!! -----------------------------------------------------------------------------

!! Has
function EnergyWeightedFunctionalsHas(handle) &
      bind(C, name='EnergyWeightedFunctionalsHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyWeightedFunctionalsHas

!! Get, const
function EnergyWeightedFunctionalsGetConst(handle) &
      bind(C, name='EnergyWeightedFunctionalsGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyWeightedFunctionalsGetConst

!! Get
function EnergyWeightedFunctionalsGet(handle) &
      bind(C, name='EnergyWeightedFunctionalsGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyWeightedFunctionalsGet

!! Set
subroutine EnergyWeightedFunctionalsSet(handle, fieldHandle) &
      bind(C, name='EnergyWeightedFunctionalsSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyWeightedFunctionalsSet


!! -----------------------------------------------------------------------------
!! Child: simpleMaxwellianFission
!! -----------------------------------------------------------------------------

!! Has
function EnergySimpleMaxwellianFissionHas(handle) &
      bind(C, name='EnergySimpleMaxwellianFissionHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergySimpleMaxwellianFissionHas

!! Get, const
function EnergySimpleMaxwellianFissionGetConst(handle) &
      bind(C, name='EnergySimpleMaxwellianFissionGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergySimpleMaxwellianFissionGetConst

!! Get
function EnergySimpleMaxwellianFissionGet(handle) &
      bind(C, name='EnergySimpleMaxwellianFissionGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergySimpleMaxwellianFissionGet

!! Set
subroutine EnergySimpleMaxwellianFissionSet(handle, fieldHandle) &
      bind(C, name='EnergySimpleMaxwellianFissionSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergySimpleMaxwellianFissionSet


!! -----------------------------------------------------------------------------
!! Child: MadlandNix
!! -----------------------------------------------------------------------------

!! Has
function EnergyMadlandNixHas(handle) &
      bind(C, name='EnergyMadlandNixHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function EnergyMadlandNixHas

!! Get, const
function EnergyMadlandNixGetConst(handle) &
      bind(C, name='EnergyMadlandNixGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyMadlandNixGetConst

!! Get
function EnergyMadlandNixGet(handle) &
      bind(C, name='EnergyMadlandNixGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function EnergyMadlandNixGet

!! Set
subroutine EnergyMadlandNixSet(handle, fieldHandle) &
      bind(C, name='EnergyMadlandNixSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine EnergyMadlandNixSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalEnergy
